# autoprompt

./: .gitignore  Makefile  autoprompt.cabal  flake.nix
app/: #autoprompt.hs#  .#autoprompt.hs  autoprompt.hs
etc/ssl/: cert.pem  key.pem  server.csr
etc/test/: chatreq.json  messagereq.json
src/Api/: Api.hs  Chat.hs  Model.hs  Ping.hs  Prompt.hs  Static.hs
src/Db/: Conversation.hs  ConversationMeta.hs  Db.hs  Enum.hs  Member.hs  Prompt.hs  Query.hs
src/Db/Entity/: Conversation.hs  ConversationMeta.hs  Enum.hs  Member.hs  Prompt.hs
src/Etc/: Autoprompt.hs  Context.hs
src/Llm/: ChatGpt.hs  Model.hs
src/Model/: Streamly.hs
src/Model/Api/: Api.hs  Chat.hs  Ping.hs  Static.hs
