cabal-version: 3.12
name:          autoprompt
version:       0.1.0.0
synopsis:      autoprompt
author:        ml
maintainer:    metaml@gmail.com
build-type:    Simple

common warnings
    ghc-options: -Wall -O2 -threaded

library
  exposed-modules: Db.Db
                 , Db.Entity.Conversation
                 , Db.Entity.ConversationMeta
                 , Db.Entity.Enum
                 , Db.Entity.Member
                 , Db.Entity.Prompt
                 , Db.Query
                 , Etc.Autoprompt
                 , Etc.Context
                 , Etc.Init
                 , Llm.ChatGpt
                 , Model.Api.Api
                 , Model.Api.Chat
                 , Model.Api.Ping
                 , Model.Api.Static
                 , Model.Streamly
  hs-source-dirs:     src
  ghc-options:        -O2 -Wall -threaded -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively -fprof-auto -fprof-cafs
  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveFunctor
                    , DeriveGeneric
                    , DerivingVia
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , ForeignFunctionInterface
                    , GADTs
                    , ImpredicativeTypes
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    -- , NoFieldSelectors
                    , OverloadedLabels
                    , OverloadedStrings
                    , OverloadedRecordDot
                    , PatternSynonyms
                    , PolyKinds
                    , QuasiQuotes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , StrictData
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances
                    , ViewPatterns
  build-depends:      base
                    , aeson
                    , aeson-optics
                    , bytestring
                    , beam-core
                    , beam-migrate
                    , beam-postgres
                    , cassava
                    , containers
                    , directory
                    , either
                    , exceptions
                    , filepath
                    , http-client
                    , http-client-tls
                    , inline-c
                    , mmzk-typeid
                    , mtl
                    , openai-hs
                    , optics-core
                    , optparse-applicative
                    , postgresql-simple
                    , servant
                    , servant-auth
                    , servant-client
                    , servant-client-core
                    , servant-server
                    , streamly-core
                    , strings
                    , text
                    , time
                    , uuid
                    , vector
                    , wai
                    , warp
                    , warp-tls

executable autoprompt
    import:             warnings
    main-is:            autoprompt.hs
    ghc-options:        -O2 -Wall -threaded -rtsopts -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively  -fprof-auto -fprof-cafs
    build-depends:      base
                      , autoprompt
                      , text
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
